--- a/style.css
+++ b/style.css
@@ -7,25 +7,14 @@ html {
 body {
   min-height: 100%;
   min-width: 100%;
-  background: linear-gradient(pink, violet);
+  background: lightblue;
 }
 
 button {
-  font-size: 7px;
+  font-size: 15px;
 }
 
-#main-content {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.3);
-  padding: 15px 20px 18px 18px;
-  border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
-}
+
 
 #list {
   margin: 10px;
@@ -34,4 +23,16 @@ button {
   padding: 15px 20px 18px 18px;
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
+}
+
+li {
+  width: 250px;
+  margin: 5px
+}
+
+img {
+  position: absolute;
+  float: right;
+  top: 300px;
+  right: 30px
 }
