--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a {
 #random-meme {
   position: absolute;
   left:840px;
-  top: 105px;
+  top: 110px;
 
   appearance: none;
   background-color: transparent;
@@ -166,3 +166,50 @@ a {
 } 
 
 
+#submit {
+  position: absolute;
+  left:600px;
+  top: 110px;
+
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid rgb(128, 11, 151);
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: rgb(26, 105, 50);
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 10%;
+  will-change: transform;
+}
+
+#submit:disabled {
+  pointer-events: none;
+}
+
+#submit:hover {
+  color: #fff;
+  background-color: #0d7199;
+  box-shadow: rgba(12, 116, 212, 0.658) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+#submit:active {
+  box-shadow: none;
+  transform: translateY(0);
+} 
